--- a/pom.xml
+++ b/pom.xml
@@ -24,14 +24,14 @@
 		<telegrambots.version>5.3.0</telegrambots.version>
 		<mapstruct.version>1.5.3.Final</mapstruct.version>
 		<hibernate-validator.version>6.2.5.Final</hibernate-validator.version>
-		<hibernate-jpamodelgen.version>6.1.7.Final</hibernate-jpamodelgen.version>
+		<hibernate.version>5.6.12.Final</hibernate.version>
 
 
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
 		<dependency>
@@ -74,11 +74,16 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>${hibernate-validator.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>${hibernate.version}</version>
+		</dependency>
 
 		<dependency>
-			<groupId>org.hibernate.orm</groupId>
+			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-jpamodelgen</artifactId>
-			<version>${hibernate-jpamodelgen.version}</version>
+			<version>${hibernate.version}</version>
 		</dependency>
 
 		<dependency>
@@ -86,6 +91,25 @@
 			<artifactId>liquibase-core</artifactId>
 			<version>4.19.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.vdurmont</groupId>
+			<artifactId>emoji-java</artifactId>
+			<version>5.1.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.lookfirst</groupId>
+			<artifactId>sardine</artifactId>
+			<version>5.10</version>
+		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework</groupId>-->
+<!--			<artifactId>spring-webmvc</artifactId>-->
+<!--			<version>6.0.6</version>-->
+<!--		</dependency>-->
+
+
+
 
 
 		<dependency>
@@ -120,7 +144,7 @@
 		<path>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-jpamodelgen</artifactId>
-			<version>${hibernate-jpamodelgen.version}</version>
+			<version>${hibernate.version}</version>
 		</path>
 		<path>
 			<groupId>org.mapstruct</groupId>
