--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+server:
+  port: 8088
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
@@ -28,3 +30,8 @@ bot:
   name: Eeessstbot
   token: 6001137020:AAGnSQR7Srwr16ahNJf56lWs2KPLOIvx8Jg
   admin: 1096527924
+
+webdav:
+  root: http://localhost:85
+  user_name: webdav
+  password: webdav
